--- a/index.html
+++ b/index.html
@@ -6,26 +6,127 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <script src="main.js"></script>
-    <title>Document</title>
+    <script src="app.js"></script>
+    <title>Document_Alumnos</title>
 </head>
 
 <body>
-    <h1>Lista de Alumnos</h1>
+    <h1 onmouseover="over(this)" onmouseout="out(this)" id="verde">Lista de Alumnos</h1>
     <div contenteditable="true" id="verde">
-        <p>Nonbre:</p>
+        <p>Nombre:</p>
         <p>Grado:</p>
+        <p>Telefono:</p>
         <p>Calificaciones:</p>
 
 
     </div>
     <h1></h1>
     <div contenteditable="true">
-        <p>Nonbre:</p>
+        <p>Nombre:</p>
         <p>Grado:</p>
+        <p>Telefono:</p>
         <p>Calificaciones:</p>
 
     </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <h1></h1>
+    <div contenteditable="true">
+        <p>Nombre:</p>
+        <p>Grado:</p>
+        <p>Telefono:</p>
+        <p>Calificaciones:</p>
+
+    </div>
+    <footer id="text">
+
+    </footer>
 </body>
 
 </html>
